--- a/common/docker-compose/l1/consensus/config.yml
+++ b/common/docker-compose/l1/consensus/config.yml
@@ -18,6 +18,7 @@ CAPELLA_FORK_EPOCH: 0
 CAPELLA_FORK_VERSION: 0x20000092
 MAX_WITHDRAWALS_PER_PAYLOAD: 16
 
+# Deneb
 DENEB_FORK_EPOCH: 1
 DENEB_FORK_VERSION: 0x20000093
 
