use ethers-v6 and fix unit tests

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -16,44 +16,47 @@
     "prepare": "cd .. && husky install contracts/.husky"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-verify": "^2.0.5",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.3.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.2.21",
     "@types/edit-json-file": "^1.7.0",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^12.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@types/node": "^20.11.27",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "chai": "^4.2.0",
     "circom": "^0.5.46",
     "circomlib": "^0.5.0",
     "dotenv": "^10.0.0",
     "edit-json-file": "^1.7.0",
-    "eslint": "^7.29.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.9.3",
+    "ethers": "^6.11.1",
+    "hardhat": "^2.22.0",
     "hardhat-gas-reporter": "^1.0.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.16",
+    "solidity-coverage": "^0.8.11",
+    "squirrelly": "8.0.8",
     "toml": "^3.0.0",
     "ts-node": "^10.1.0",
-    "typechain": "^5.1.2",
-    "typescript": "^4.5.2"
+    "typechain": "^8.3.2",
+    "typescript": "^5.4.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^v4.9.3",
@@ -63,5 +66,8 @@
     "*.{js,ts}": "npx eslint --cache --fix",
     "!(docs/apis/*).md": "prettier --ignore-unknown --write",
     "*.sol": "prettier --ignore-unknown --write"
+  },
+  "engines": {
+    "node": ">=10.4.0"
   }
 }
