support parallel unit tests

--- a/common/docker-compose/l1/.gitignore
+++ b/common/docker-compose/l1/.gitignore
@@ -1,5 +1,7 @@
-consensus/beacondata
+consensus/beacondata*
 consensus/genesis.ssz
-consensus/validatordata
+consensus/validatordata*
+consensus/data*
 execution/geth
 execution/geth.ipc
+execution/data*
