--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -16,7 +16,9 @@
     "driver_name": "postgres",
     "dsn": "postgres://localhost/scroll?sslmode=disable",
     "maxOpenNum": 200,
-    "maxIdleNum": 20
+    "maxIdleNum": 20,
+    "maxLifetime": 600,
+    "maxIdleTime": 300
   },
   "l2": {
     "chain_id": 111
