--- a/database/config.json
+++ b/database/config.json
@@ -2,5 +2,7 @@
   "dsn": "postgres://postgres:123456@localhost:5444/test?sslmode=disable",
   "driver_name": "postgres",
   "maxOpenNum": 200,
-  "maxIdleNum": 20
+  "maxIdleNum": 20,
+  "maxLifetime": 600,
+  "maxIdleTime": 300
 }
