--- a/rollup/conf/config.json
+++ b/rollup/conf/config.json
@@ -79,6 +79,8 @@
     "driver_name": "postgres",
     "dsn": "postgres://localhost/scroll?sslmode=disable",
     "maxOpenNum": 200,
-    "maxIdleNum": 20
+    "maxIdleNum": 20,
+    "maxLifetime": 600,
+    "maxIdleTime": 300
   }
 }
