feat(rollup-relayer): support codecv1 in rollup-relayer

--- a/common/docker-compose/l1/docker-compose.yml
+++ b/common/docker-compose/l1/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     command:
       - testnet
       - generate-genesis
-      - --fork=capella
+      - --fork=deneb
       - --num-validators=64
       - --genesis-time-delay=3
       - --output-ssz=/data/consensus/genesis.ssz
