--- a/prover/config.json
+++ b/prover/config.json
@@ -1,5 +1,6 @@
 {
     "prover_name": "prover-1",
+    "hard_fork_name": "homestead",
     "keystore_path": "keystore.json",
     "keystore_password": "prover-pwd",
     "db_path": "unique-db-path-for-prover-1",
